--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 django = "^5.2.3"
+psycopg2-binary = "^2.9.10"
+python-dotenv = "^1.1.0"
+pillow = "^11.2.1"
+psycopg2 = "^2.9.10"
 
 
 [build-system]
